svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: friday
  name: friday
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: friday
status:
  loadBalancer: {}
