ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: friday
spec:
  rules:
  -   host: friday.user0.k8z.eu
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: friday
                port:
                  number: 80
